@@ -9,6 +9,9 @@ Added the Export_Structure function.
 Fixed a bug in VCF2RADdata that would occur if expectedAlleles or expectedLoci
 were set too low.
 
+Fixed a bug in SubsetByLocus, MergeRareHaplotypes, and MergeIdenticalHaplotypes
+that would delete the "Variable_sites_only" attribute, preventing VCF export.
+
 ## Changes in v1.2 ##
 
 The functions HindHe and HindHeMapping have been added, to assist with filtering
